# video-summary-bot

./: CLAUDE.md  README.md  pyproject.toml
.qwen/: settings.json
notebooks/: playground.ipynb
src/video_summary_bot/bots/: combined.py  video_summary.py
src/video_summary_bot/database/: postgres_operations.py
src/video_summary_bot/handlers/: gemini.py  youtube.py  youtube_rss.py
tests/: conftest.py
tests/test_bots/: test_listen.py  test_scheduler.py  test_video_summary.py
tests/test_database/: test_factory.py  test_operations.py
tests/test_handlers/: test_gemini.py  test_shorts_detection.py  test_telegram.py  test_youtube.py  test_youtube_rss.py
tests/test_utils/: test_logger.py  test_url_parser.py
