[project]
name = "video-summary-bot"
version = "0.1.0"
description = "Automated YouTube video summarizer bot for Telegram"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "schedule==1.2.2",
    "requests==2.32.5",
    "python-dotenv==1.1.1",
    "youtube-transcript-api==1.2.2",
    "google-api-python-client==2.182.0",
    "google-generativeai==0.8.5",
    "feedparser==6.0.12",
    "pytz>=2024.0",
    "pg8000>=1.31",
    "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
video-summary-bot = "video_summary_bot.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/video_summary_bot"]